package eu.telecomnancy.codingweek.codenames.model;

import java.util.ArrayList;
import java.util.List;

public class AgentTeam extends Team {

    public AgentTeam(List<Player> playersList, Session session) {
        super(null, playersList, session);
    }

    public void addClue(Clue clue) {
        // A_REVOIR
    }

}
