package eu.telecomnancy.codingweek.codenames.model;

import java.util.ArrayList;
import java.util.List;

public class GameConfig {
    
    private int width;
    private int height;
    private List<Player> blueAgentTeam = new ArrayList<>();
    private List<Player> blueSpyTeam = new ArrayList<>();
    private List<Player> redAgentTeam = new ArrayList<>();
    private List<Player> redSpyTeam = new ArrayList<>();

}
