package eu.telecomnancy.codingweek.codenames.model;

public class Player {
    
    private String name;

    public Player(String name) {
        this.name = name;
    }

    public String getName() {
        return this.name;
    }

}
