package eu.telecomnancy.codingweek.codenames.model.card;

public enum CardState {
    GOOD,
    ENEMY,
    NEUTRAL,
    FORBIDDEN
}
