package eu.telecomnancy.codingweek.codenames.model.color;

public enum Color {
    NULL, //Couleur Null
    WHITE,
    BLACK,
    BLUE,
    RED
}
